# stock-quant-trading

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  env.paper.example  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  실행전략설명.txt
Docs/: Summary.docx  api_contract_app.md  api_plan.md  app_architecture.md  architecture.md  backtest_method.md  beginner_client_download_install_ko.md  client_install_download.md  dashboard_data_sources.md  deployment_backend.md  deployment_desktop.md  deployment_mobile.md  e2e_mock_trading.md  feasibility_day_domestic_night_us.md  live_prep_manual_approval_ops.md  live_trading_checklist.md  manual_auth_session_validation.md  paper_trading_flow.md  product_architecture.md  quickstart_admin_backend.md  quickstart_real_mock_trading.md  quickstart_user_android.md  quickstart_user_desktop.md  readiness_report.md  release-packages-last-build.md  runtime_env.md  security_design.md  strategy_revision_2026_04.md  system_design.md  today_run_checklist.md  trading_rules.md  user_flow.md  ~$ummary.docx  한국투자증권 APP key 정보.docx
app/: config.py  logging.py  main.py
backend/: Dockerfile  __init__.py  requirements.txt
backend_data/: broker_accounts.db
data/: domestic_liquid_symbols.json
docs/: paper_scalp_rsi_hf_v1.md  system_design.md
requirements/: backend.txt  dev.txt
scripts/: __init__.py  build-release-zips.ps1  check_env.py  check_final_betting_flag.py  check_kis_balance.py  check_kis_connection.py  check_kis_intraday_time_chart.py  check_kis_mock_autotrade_pipeline.py  check_kis_order_mock.py  check_kis_quote.py  check_kis_quotes.py  check_kis_us_bars.py  check_kis_us_order_mock.py  check_kis_us_quote.py  check_paper_frontend_backend_alignment.py  check_runtime_safety.py  check_us_paper_session.py  kis_script_utils.py  package-android-install-zip.ps1  package-client-install-zip.ps1  preflight-desktop-build.js  run_backend.bat  run_backend.sh  run_desktop.bat  run_mobile.bat  start_paper_trading_demo.py  verify_paper_api_remote.py  verify_trading_flow.ps1  verify_us_kis_endpoints.py
(+318 files in other folders)
