[project]
name = "stock-quant-trading"
version = "0.1.0"
description = "Safety-first quant trading skeleton"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.1",
  "requests>=2.31.0",
  "cryptography>=42.0.0",
  "sqlalchemy>=2.0.0",
  "pandas>=2.2.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
